[package]
name = "wasabi"
description = "A template repository for deno modules that want to use wasm"
version = "0.1.1"
authors = ["Elias Sjögreen", "Filippo Rossi"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.64"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
opt-level = "z"

[features]
default = ["wee_alloc"]
