[package]
name = "wasabi"
description = "A template repository for deno modules that want to use wasm"
repository = "https://github.com/denosaurs/wasabi"
license = "MIT"
version = "0.1.3"
authors = ["Elias Sjögreen", "Filippo Rossi"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = ["wee_alloc"]
